Change file name so it is index.html such that the code will run, script.js fix movable button by removing if, style.css change button font and border, style2.css created 2 separate mini-box function and aligned them left and right.

--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ h1 {
 button {
     background-color: #4caf50;
     /* Green */
-    border: none;
+    border: ridge;
     color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: block;
-    font-size: 20px;
+    font-size: 14px;
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 0px;
